# Furia-Challenge-1

./: README.md  pyproject.toml
app/: bot.py  main.py
app/bot/: bot.py
app/bot/handlers/: redes.py  streamers.py
app/services/: twitch.py
